<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="app_name">小吃</string>
    <string name="action_settings">Settings</string>
    <string name="mm_inTheBusiness_txt">营业中</string>
    <string name="mm_nonoperating_txt">打样了</string>
    <string name="mm_shop_openclose_zw_txt">早%1$s~晚%2$s</string>
    <string name="mm_shop_distribution_price_txt">%1$s元起送</string>
    <string name="mm_how_much_txt">￥%1$s</string>
    <string name="mm_my_order_txt">我的订单</string>
    <string name="mm_my_coupon_txt">我的代金券</string>
    <string name="mm_invitation_code_txt">邀请码</string>
    <string name="mm_my_address_txt">我的收货地址</string>
    <string name="mm_my_feedback_txt">意见反馈</string>
    <string name="mm_my_share_txt">把喵喵生活分享给朋友</string>
    <string name="mm_my_update_txt">检查更新</string>
    <string name="mm_my_aboue_txt">关于喵喵</string>
    <string name="mm_my_service_phone_txt">联系客服：400-881-6807</string>
    <string name="mm_shop_openclose_24_txt">24小时营业</string>
    <string name="mm_shop_business_hours_txt">每天%1$s-%2$s点配送</string>
    <string name="mm_tag_frist">第一个Tag</string>
    <string name="mm_tag_second">第一个Tag</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
    <string name="startlocation">开启定位</string>
    <string name="stoplocation">停止定位</string>
    <string name="error_code_desc">错误码说明</string>
    <string name="qa_title">常见问题</string>
    <string name="hight_accuracy_desc">高精度定位模式下，会同时使用GPS、Wifi和基站定位，返回的是当前条件下精度最好的定位结果</string>
    <string name="saving_battery_desc">低功耗定位模式下，仅使用网络定位即Wifi和基站定位，返回的是当前条件下精度最好的网络定位结果</string>
    <string name="device_sensor_desc">仅用设备定位模式下，只使用用户的GPS进行定位。这个模式下，由于GPS芯片锁定需要时间，首次定位速度会需要一定的时间</string>
    <string name="error_code_detail">"61 ： GPS定位结果
 62 ： 扫描整合定位依据失败。此时定位结果无效。
 63 ： 网络异常，没有成功向服务器发起请求。此时定位结果无效。
 65 ： 定位缓存的结果。
 66 ： 离线定位结果。通过requestOfflineLocaiton调用时对应的返回结果
 67 ： 离线定位失败。通过requestOfflineLocaiton调用时对应的返回结果
 68 ： 网络连接失败时，查找本地离线定位时对应的返回结果
 161： 表示网络定位结果
 162~167： 服务端定位失败
 502：key参数错误
 505：key不存在或者非法
 601：key服务被开发者自己禁用
 602：key mcode不匹配
 501～700：key验证失败
"</string>
    <string name="qa_callback">问题反馈方法</string>
    <string name="qa_callback_mail">mapapi@baidu.com</string>
    <string name="app_back">返回</string>
    <string name="app_ok">确定</string>
    <string name="app_cancel">取消</string>
    <string name="app_continue">继续</string>
    <string name="app_tip">提示</string>
    <string name="app_send">发送</string>
    <string name="app_set">设置</string>
    <string name="app_save">保存</string>
    <string name="app_delete">删除</string>
    <string name="app_nextstep">下一步</string>
    <string name="app_prevstep">上一步</string>
    <string name="app_finish">完成</string>
    <string name="app_find">查找</string>
    <string name="app_edit">编辑</string>
    <string name="applet_secimg_title">填写验证码</string>
    <string name="applet_secimg_change">换一张图片</string>
    <string name="applet_seccode_tip">验证码不能为空</string>
    <string name="applet_seccode_fail_tip">验证码错误，请重新输入</string>
    <string name="verify_password_null_tip">密码不能为空，请输入密码</string>
    <string name="fmt_date">M月d日</string>
    <string name="fmt_longdate">yyyy年M月d日</string>
    <string name="fmt_datetime">M月d日 %skk:mm</string>
    <string name="fmt_patime">kk:mm</string>
    <string name="fmt_longtime">yyyy年M月d日 %skk:mm</string>
    <string name="fmt_in60min">%d分钟前</string>
    <string name="fmt_justnow">1分钟内</string>
    <string name="fmt_dawn">凌晨</string>
    <string name="fmt_morning">早上</string>
    <string name="fmt_noon">中午</string>
    <string name="fmt_afternoon">下午</string>
    <string name="fmt_evening">晚上</string>
    <string name="fmt_pre_yesterday">昨天</string>
    <string name="fmt_iap_err">网络连接不可用，请稍候重试</string>
    <string name="hello">Hello World, SDKSampleActivity!</string>
    <string name="app_share">分享</string>
    <string name="enter">这是SDK_Sample的入口界面</string>
    <string name="reg">将该app注册到微信</string>
    <string name="goto_send">跳转到发消息界面</string>
    <string name="goto_pay">跳转到支付界面</string>
    <string name="goto_fav">跳转到收藏界面</string>
    <string name="launch_wx">启动微信</string>
    <string name="check_timeline_supported">检查是否支持发送到朋友圈</string>
    <string name="send_to_wx_title">发送到微信</string>
    <string name="get_from_wx_title">从微信接收</string>
    <string name="show_from_wx_title">显示微信请求的消息</string>
    <string name="pay_by_wx_title">通过微信支付</string>
    <string name="prepay_id_wx_text">prepayid</string>
    <string name="invoke_ip">invoke_ip</string>
    <string name="prepay_id_value">wx20141126110244e3e4bc4e580111072793</string>
    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unknown">发送返回</string>
    <string name="launch_from_wx">Launch From Weixin</string>
    <string name="input_openid">输入openid</string>
    <string name="input_scope">输入scope</string>
    <string name="send">发送到微信</string>
    <string name="receive">从微信接收</string>
    <string name="is_timeline">是否分享到朋友圈</string>
    <string name="send_text">发送文本</string>
    <string name="send_text_default">这段文字发送自微信SDK示例程序</string>
    <string name="send_img">发送图片</string>
    <string name="send_img_file_not_exist">文件不存在</string>
    <string name="send_file">发送文件</string>
    <string name="send_file_file_not_exist">文件不存在</string>
    <string name="send_pic">发送照片</string>
    <string name="send_music">发送音乐</string>
    <string name="send_video">发送视频</string>
    <string name="send_webpage">发送网页</string>
    <string name="send_appdata">发送app消息</string>
    <string name="send_emoji">发送表情消息</string>
    <string name="share_text_to_weixin">回应文本到微信</string>
    <string name="share_text_default">这段文字回应自微信SDK示例程序</string>
    <string name="share_url_to_weixin">回应URL到微信</string>
    <string name="share_pic_to_weixin">回应图片到微信</string>
    <string name="share_music_to_weixin">回应音乐到微信</string>
    <string name="share_video_to_weixin">回应视频到微信</string>
    <string name="share_appdata_to_weixin">回应app消息到微信</string>
    <string name="register_as_weixin_app_sender">注册微信事件发送器</string>
    <string name="get_token_from_weixin">获取微信访问Token</string>
    <string name="unregister_from_weixin">从微信反注册</string>
    <string name="show_from_wx_tip">这个界面用于显示微信向第三方app请求显示的信息</string>
    <string name="unifiedorder_v3_wx">APP支付生成预支付订单</string>
    <string name="pay__pre_by_wxap">生成APP微信支付参数</string>
    <string name="pay_by_wxap">调起微信支付</string>
    <string name="check_pay">检查微信版本是否支持支付</string>
    <string name="input_reqkey">输入reqkey</string>
    <string name="input_package_value">输入package value</string>
    <string name="input_sign">输入sign</string>
    <string name="getting_access_token">正在获取access token...</string>
    <string name="get_access_token_succ">获取access token成功</string>
    <string name="get_access_token_fail">获取access token失败，原因%s</string>
    <string name="getting_prepayid">正在获取预支付订单...</string>
    <string name="paying">支付中</string>
    <string name="get_prepayid_succ">获取prepayid成功</string>
    <string name="get_prepayid_fail">获取prepayid失败，原因%s</string>
    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="pay_result_callback_msg">微信支付结果：%s</string>
    <string name="bc_pay">微信支付</string>
    <string name="bc_pay_wx_title">微信支付</string>
    <string name="bc_pay_goto_wx">打开微信支付</string>
    <string name="umeng_common_action_info_exist">The app is already in downloading list.</string>
    <string name="umeng_common_info_interrupt">dowload interrupted.</string>
    <string name="umeng_common_action_pause">Pause</string>
    <string name="umeng_common_action_continue">Continue</string>
    <string name="umeng_common_action_cancel">Cancel</string>
    <string name="umeng_common_download_notification_prefix">Downloading:</string>
    <string name="umeng_common_pause_notification_prefix">Pause:</string>
    <string name="umeng_common_start_download_notification">Download start.</string>
    <string name="umeng_common_start_patch_notification">Patch start.</string>
    <string name="umeng_common_network_break_alert">Please make sure you are connected to internet, download failed</string>
    <string name="umeng_common_download_failed">Download Failed!</string>
    <string name="umeng_common_download_finish">Download finished,click to install it.</string>
    <string name="umeng_common_patch_finish">Patch finished,click to install it.</string>
    <string name="umeng_common_silent_download_finish">New version is ready,click to install it.</string>
    <string name="umeng_common_icon">icon</string>
    <string name="UMBreak_Network">Please make sure you are connected to internet,update failed</string>
    <string name="UMUpdateTitle">New version found</string>
    <string name="UMNewVersion">Latest version:</string>
    <string name="UMUpdateContent">Update Content</string>
    <string name="UMUpdateSize">Update size:</string>
    <string name="UMTargetSize">Target size:</string>
    <string name="UMGprsCondition">(Warning: Not WIFI Condition)</string>
    <string name="UMUpdateNow">Update now</string>
    <string name="UMAppUpdate">App updating</string>
    <string name="UMNotNow">Not now</string>
    <string name="UMIgnore">Ingore this</string>
    <string name="UMToast_IsUpdating">Updating....</string>
    <string name="UMDialog_InstallAPK">The lastest version has been downloaded, install now ?</string>
    <string name="UMUpdateCheck">2.6.0.1.20150312</string>

    <!--comm text-->
    <string name="isloading">正在加载中...</string>


    <string name="hello_world">Hello world!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
