<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:background="@color/mm_nav_bg_color" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="130.0dip">
        <Button android:id="@+id/chi_nav_left_btn" android:background="@drawable/mm_write_left_triangle_btn" android:layout_width="23.0dip" android:layout_height="23.0dip" android:layout_alignParentTop="true" />
        <Button android:id="@+id/chi_nav_right_btn" android:background="@drawable/mm_setting_btn" android:layout_width="21.0dip" android:layout_height="21.0dip" android:layout_alignParentTop="true" android:layout_alignParentRight="true" />
        <ImageView android:id="@+id/chi_nav_icon_img" android:background="@drawable/mm_my_defult_icon" android:layout_width="70.0dip" android:layout_height="70.0dip" android:layout_centerHorizontal="true" />
        <TextView android:textSize="20.0sp" android:textStyle="bold" android:textColor="@color/white" android:id="@+id/chi_nav_phone_txt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_below="@+id/chi_nav_icon_img" android:layout_centerHorizontal="true" />
    </RelativeLayout>
    <TextView android:background="@color/mm_color_a9a9a9" android:layout_width="fill_parent" android:layout_height="0.5dip" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <RelativeLayout android:id="@+id/chi_nav_order_item_rl" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginTop="10.0dip">
                <ImageView android:id="@+id/chi_nav_order_item_icon_img" android:src="@drawable/mm_my_order_icon" style="@style/my_item_icon_style" />
                <TextView android:id="@+id/chi_nav_order_item_tv" android:text="@string/mm_my_order_txt" android:layout_toRightOf="@+id/chi_nav_order_item_icon_img" style="@style/my_item_style" />
                <ImageView android:src="@drawable/mm_gray_right_triangle" android:layout_alignParentRight="true" style="@style/my_right_triangle_style" />
            </RelativeLayout>
            <View android:background="@color/mm_color_e5e5e5" android:layout_width="fill_parent" android:layout_height="0.5dip" />
            <RelativeLayout android:id="@+id/chi_nav_coupon_item_rl" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="50.0dip">
                <ImageView android:id="@+id/chi_nav_coupon_item_img" android:src="@drawable/mm_my_coupons_icon" style="@style/my_item_icon_style" />
                <TextView android:id="@+id/chi_nav_coupon_item_tv" android:text="@string/mm_my_coupon_txt" android:layout_toRightOf="@+id/chi_nav_coupon_item_img" style="@style/my_item_style" />
                <ImageView android:src="@drawable/mm_gray_right_triangle" android:layout_alignParentRight="true" style="@style/my_right_triangle_style" />
            </RelativeLayout>
            <View android:background="@color/mm_color_e5e5e5" android:layout_width="fill_parent" android:layout_height="0.5dip" />
            <RelativeLayout android:id="@+id/chi_nav_address_item_rl" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="50.0dip">
                <ImageView android:id="@+id/chi_nav_address_item_img" android:src="@drawable/mm_my_adr_icon" style="@style/my_item_icon_style" />
                <TextView android:id="@+id/chi_nav_address_item_tv" android:text="@string/mm_my_address_txt" android:layout_toRightOf="@+id/chi_nav_address_item_img" style="@style/my_item_style" />
                <ImageView android:src="@drawable/mm_gray_right_triangle" android:layout_alignParentRight="true" style="@style/my_right_triangle_style" />
            </RelativeLayout>
            <View android:background="@color/mm_color_e5e5e5" android:layout_width="fill_parent" android:layout_height="0.5dip" />
            <RelativeLayout android:id="@+id/chi_invitation_code_item_rl" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="50.0dip">
                <ImageView android:id="@+id/chi_invitation_code_item_img" android:src="@drawable/mm_my_coupons_icon" style="@style/my_item_icon_style" />
                <TextView android:id="@+id/chi_invitation_code_item_tv" android:text="@string/mm_invitation_code_txt" android:layout_toRightOf="@+id/chi_invitation_code_item_img" style="@style/my_item_style" />
                <ImageView android:src="@drawable/mm_gray_right_triangle" android:layout_alignParentRight="true" style="@style/my_right_triangle_style" />
            </RelativeLayout>
            <View android:background="@color/mm_color_e5e5e5" android:layout_width="fill_parent" android:layout_height="0.5dip" />
            <RelativeLayout android:id="@+id/chi_nav_feedback_item_rl" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginTop="10.0dip">
                <ImageView android:id="@+id/chi_nav_feedback_item_img" android:src="@drawable/mm_my_feedback_icon" style="@style/my_item_icon_style" />
                <TextView android:id="@+id/chi_nav_feedback_item_tv" android:text="@string/mm_my_feedback_txt" android:layout_toRightOf="@+id/chi_nav_feedback_item_img" style="@style/my_item_style" />
                <ImageView android:src="@drawable/mm_gray_right_triangle" android:layout_alignParentRight="true" style="@style/my_right_triangle_style" />
            </RelativeLayout>
            <View android:background="@color/mm_color_e5e5e5" android:layout_width="fill_parent" android:layout_height="0.5dip" />
            <RelativeLayout android:id="@+id/chi_nav_service_phone_item_rl" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="50.0dip">
                <ImageView android:id="@+id/chi_nav_service_phone_item_img" android:src="@drawable/mm_my_service_phone_icon" style="@style/my_item_icon_style" />
                <TextView android:id="@+id/chi_nav_service_phone_item_tv" android:text="@string/mm_my_service_phone_txt" android:layout_toRightOf="@+id/chi_nav_service_phone_item_img" style="@style/my_item_style" />
                <ImageView android:visibility="gone" android:src="@drawable/mm_gray_right_triangle" android:layout_alignParentRight="true" style="@style/my_right_triangle_style" />
            </RelativeLayout>
            <View android:background="@color/mm_color_e5e5e5" android:layout_width="fill_parent" android:layout_height="0.5dip" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>